Fixing Reset button label

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="calculate_btn_label">Calculate</string>
     <string name="tip_amount_label">Tip Amount</string>
     <string name="total_label">Total</string>
-    <string name="reset_btn_label">Tip Amount</string>
+    <string name="reset_btn_label">Reset</string>
     <string name="default_double">$0.00</string>
     <string name="empty_string"></string>
 
